# makecodeArcadeAssetTool

./: LICENSE  README.md  img2asset.py  palette.json  palette_original.json  pyproject.toml
output/: assets.ts
tests/: test_img2asset.py
